# neuralcodec-rpi

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-torch.txt  requirements.txt
benchmark/: audio_io.py  mesure.py  run.py
benchmark/acodecs/: codec2_codec.py  encodec_codec.py  opus_codec.py  soundstream_codec.py
benchmark/codecs/: opus_codec.py
benchmark/results/: results.csv
benchmark/results/pc/: results.csv
benchmark/results/pi/: results.csv
notebooks/: analysis.ipynb
src/neuralcodec/: live_receiver.py  live_transmitter.py  receiver.py  transmitter.py
src/neuralcodec/common/: audio_io.py  codec_registry.py
src/neuralcodec/common/acodecs/: encodec_codec.py  soundstream_codec.py
